--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "trung",
   "license": "ISC",
   "devDependencies": {
+    "@tsconfig/node12": "^1.0.7",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "chai": "^4.2.0",
