--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,12 @@
 {
+    "extends": "@tsconfig/node12/tsconfig.json",
     "compilerOptions": {
-        "target": "es5",
+        "target": "es2015",
         "module": "commonjs",
         "outDir": "dist",
         "sourceMap": true
-    }
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "test/**/*"]
+    
 }
